sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  var ecart=getNombreValeurs()
  var i=0
  var a=true
  do{
      while (0<1){
    if (a==false && b==false){
      return
    }
        a=false
  if (ecart>1){
    ecart = (ecart.toDouble / 1.3).toInt
  }
  while (i+ecart<getNombreValeurs()){
    if (!plusPetit(i,i+ecart)){
      echange(i,i+ecart)
    }
      i=i+1
    }
  }
}while (ecart>1)
}